--- a/sass/components/NewMessage.scss
+++ b/sass/components/NewMessage.scss
@@ -1,18 +1,17 @@
-.root {
-    padding: 5px;
+.container {
     position: relative;
-    display: block;
     width: 100%;
     height: 100%;
+
+    display: flex;
+    flex-direction: row;
 }
 
 .input {
-    width: 100%;
+    flex-grow: 1;
     height: 100%;
 }
 
 .submit {
-    position: absolute;
-    right: 0;
-    top: 0;
+    flex-grow: 0;
 }
