--- a/sass/root.scss
+++ b/sass/root.scss
@@ -1,16 +1,19 @@
+@import 'abstracts/fontface';
+
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html, body {
-    height: 100%;
+  font-family: Roboto, sans-serif;
+  height: 100%;
 }
 
 body {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
-:global(#root) {
-    height: 100%;
+#root {
+  height: 100%;
 }
