--- a/sass/root.scss
+++ b/sass/root.scss
@@ -12,8 +12,10 @@ html, body {
 body {
   padding: 0;
   margin: 0;
+  font-size: 14px;
+  background: #FEEDFF;
 }
 
-#root {
+:global(#root) {
   height: 100%;
 }
