--- a/sass/components/Message.scss
+++ b/sass/components/Message.scss
@@ -1,6 +1,10 @@
 .root {
   display: inline-block;
-  padding: 10px;
+  padding: 16px;
   background: #FFF;
-  border-radius: 5px;
+  border-radius: 4px;
+  max-width: 320px;
+  font-size: 13px;
+  line-height: 16px;
+  box-shadow: 2px 4px 5px -4px rgba(0,0,0,0.2);
 }
