CSS variables for typography

--- a/sass/abstracts/_fontface.scss
+++ b/sass/abstracts/_fontface.scss
@@ -1,20 +1,13 @@
 @font-face {
-  font-family: 'Roboto';
+  font-family: 'Arbutus Slab';
   font-style: normal;
   font-weight: 400;
-  src: url('/fonts/Roboto/Roboto-Regular.ttf');
+  src: url('/fonts/Arbutus_Slab/ArbutusSlab-Regular.ttf');
 }
 
 @font-face {
-  font-family: 'Roboto';
-  font-style: italic;
-  font-weight: 400;
-  src: url('/fonts/Roboto/Roboto-Italic.ttf');
-}
-
-@font-face {
-  font-family: 'Roboto';
+  font-family: 'Poppins';
   font-style: normal;
-  font-weight: 700;
-  src: url('/fonts/Roboto/Roboto-Bold.ttf');
+  font-weight: 600;
+  src: url('/fonts/Poppins/Poppins-SemiBold.ttf');
 }
