--- a/sass/components/Message.scss
+++ b/sass/components/Message.scss
@@ -1,10 +1,9 @@
+@import '../abstracts/variables';
+
 .root {
   display: inline-block;
-  padding: 16px;
-  background: #FFF;
-  border-radius: 4px;
+  padding: 0;
+  padding-bottom: 16px;
   max-width: 320px;
-  font-size: 13px;
-  line-height: 16px;
-  box-shadow: 2px 4px 5px -4px rgba(0,0,0,0.2);
+  border-bottom: $border-base;
 }
