--- a/sass/root.scss
+++ b/sass/root.scss
@@ -1,19 +1,19 @@
 @import 'abstracts/fontface';
+@import 'abstracts/variables';
+@import 'base/normalize';
+@import 'base/typography';
 
 * {
   box-sizing: border-box;
 }
 
 html, body {
-  font-family: Roboto, sans-serif;
   height: 100%;
 }
 
 body {
   padding: 0;
   margin: 0;
-  font-size: 14px;
-  background: #FEEDFF;
 }
 
 :global(#root) {
