Set new message field to "" when submitting

--- a/sass/components/Message.scss
+++ b/sass/components/Message.scss
@@ -9,10 +9,10 @@
 }
 
 .statusSending {
-  border-bottom-color: #FF0;
+  border-bottom-style: dotted;
 }
 .statusSuccess {
-  border-bottom-color: #0F0;
+  border-bottom-style: solid;
 }
 .statusFailure {
   border-bottom-color: #F00;
