--- a/sass/root.scss
+++ b/sass/root.scss
@@ -2,6 +2,7 @@
 @import 'abstracts/variables';
 @import 'base/normalize';
 @import 'base/typography';
+@import 'base/list';
 
 * {
   box-sizing: border-box;
